CSS/portfolio.css
/* ... */
/* Styling of the dots under the slideshow */
.dot {
    cursor: pointer; /* The cursor changes to pointer when hovered over the dots */
    height: 1vw; /* The dots are sized relative to the viewport width */
    width: 1vw;
    margin: .25vw; /* adds additional spacing between the dots */ 
    background-color: white; /* Makes the dots white */
    border-radius: 50%; /* Makes the dots circles by rounding each corner */
    display: inline-block; /* Allows the dots to sit next to eachother rather than on a new line */
    transition: background-color 0.6s ease; /* When clicked on the dots transition to a different color when clicked or hovered over (the affect is defined below) */
    z-index: 1; /* This ensures the dots will be displayed above any other elements */
}

/* Hover effect for slideshow dots */
.active, .dot:hover {
    background-color: rgb(8, 181, 255); /* Sets the color of the dots when active or hovered over */
}

/* Fading animation for slideshow */
.fade {
    animation-name: fade; /* Fade animation is defined below */
    animation-duration: 1.5s; /* The animation lasts 1.5 seconds */
    -webkit-animation-name: fade; /* Same as above for Safari 4.0-8.0 */
    -webkit-animation-duration: 1.5s;
}

@-webkit-keyframes fade {
    from {opacity: .4;} /* Image starts transparent */
    to {opacity: 1;} /* Image ends opaque */
}

@keyframes fade {
    from {opacity: .4;} /* Image starts transparent */
    to {opacity: 1;} /* Image ends opaque */
}
/***** End Slideshow Styling *****/

/***** Table Styling -  this section covers the styling of the columns and rows within the table *****/
* { /*The asterisk is a universal selector that applies this effect to all elements on the page */
    box-sizing: border-box; /* This creates a box with a border within which we will place most of our text */
} 

.Column_1 {
    float: left;
    width: 50%; /* This ensures the column takes up half of the page width */
    padding: 2%;
    height: 65vh; 
    background-color:rgb(0, 0, 0); /* Sets the background color of the left columns */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    font-size:0.5vw;
    line-height:1.25;
    color: white;
}

.about-section {
    width: 100%; /* This ensures the column takes up half of the page width */
    padding: 5%;
    height: 65vh; 
    background-color:rgb(0, 0, 0); /* Sets the background color of the left columns */
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    line-height:1.25;
    margin-bottom: 15vh;
}
.about-section p {
        line-height: 1.25;
        
}
.isolation-container {
    padding: clamp(3rem, 10vh, 6rem);
    color: white;
    font-weight: 700;
    isolation: isolate;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .isolation {
    padding: 1rem;
    position: relative;
    }

  .isolation::after {
    content: "";
    position: absolute;
    inset: -1em;
    background: linear-gradient(to bottom right, rgb(50, 84, 255), rgb(255, 24, 217));
    filter:blur(1.5em);
    z-index: -1;
  }

.Column_2 {
    float: left;
    width: 50%;
    height: 65vh;
    background-color: black;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    overflow:hidden;

}

.Column_1.astro {
    overflow-y: scroll;
    padding-top: 100px;
    padding-left: 25px;
    padding-right: 25px;
    line-height: 1.25;
}

.Column_1.astro::-webkit-scrollbar {
    background:rgba(0, 0, 0, 0.0);
    border-radius: 100vw;
}

.Column_1.astro::-webkit-scrollbar-thumb {
    background: linear-gradient(rgb(41, 116, 169), rgb(5, 5, 6));
    border-radius: 100vw;
}
::-webkit-scrollbar {
    background:rgba(0, 0, 0, 0.0);
}

::-webkit-scrollbar-thumb {
    background: linear-gradient(rgb(41, 116, 169), rgb(5, 5, 6));
    border-radius: 100vw;
}
.api_Content {
    display: flex;
    justify-content: center;
    align-items: center;
}

#api_Title {
    color: white;
    position: absolute;
    margin-top: -30%;
    background-image: linear-gradient(to left, violet, indigo, orange, red);
    -webkit-background-clip: text;
    -moz-background-clip: text;
    background-clip: text;
    color: transparent;
}

#api_Date {
    color: white;
    position: absolute;
    margin-top: -40%;
    font-style: italic;
}
#api_Img {
    height: 100%;
    object-fit: contain;
    padding-top: 3%;
}

.Column_3 {
    float: left;
    width: 50%;
    height: 65vh;
    background-color: #000000;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

}

.parent {
    margin: auto;
    height: 250px;
    width: 250px;
    border: 3px solid white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    transition: transform 2s ease-in-out;
    transition-duration: 10s;
}
.child {
    height: 50%;
    width: 50%;
    background-color: white;
    border-radius: 50%;
    transition: transform 2s ease-in-out;
    transition-duration: 15s;
}

.child:active {
    animation: colors 1s ease-in forwards infinite alternate;
}

@keyframes colors {
    0% {
       background-color: red;
       
     }
     20% {
         background-color: orange;
         border: 1px solid white;
     }
     40% {
         background-color: yellow;
         
     }
     60% {
         background-color: green;
         border: 1px solid white;
     }
     80% {
         background-color: blue;
        
     }
     100% {
         background-color: blueviolet;
         border: 1px solid white;
     }
}
/* ... */

